Verion 0.9.45dev (?? ??? 2004)
  - Added title attributes to time cells in view_d.php
  - Created styles for view_d.php
  - Fixed random border-rendering issues in week.php
  - Fixed Bug 1016135: Time is listed in email for untimed events
  - Fixed Bug 1026762: import handler --circular code
  - Fixed Bug 1020450: upcomming rev1.3 doesn't display layers
  - Added user-ldap patch by David Black to use $ldap_user_attr throughout script
  - Only allow word characters (a-zA-Z_0-9) in nonuser calendar ID's
  - Fixing up styles in views
  - Fixed bug 1048157: user select in managing views
  - Fixing login.php so it's both xHTML 1.0T valid, and properly handles
  translations
  - Fixed Bug 1050786: Mail fails if not "\r\n" in extra headers
  - Fixed Bug 1052000: Error in Day view for several users
  - Fixed Bug 1050624: upcoming.php doesn't work when requiring public access
  - Applying patch #1055122: making custom colors update on change
  - Fixed bug 1044374: random issues with Bulgarian translation file
  - Implemented minicalendar function
  - Consolidated styles
  - Added 'Back' links on pages like groups_edit.php
  - Fixed some php for styling headers & cells in selected views
  - Added border to colors admin section
  - Added img.help class for help images
  - Added docs to styles.php (will eventually end up in a styles
  documentation, of some sort)
  - Continued making code easier to read post-rendering
  - Removing blank lines at the end of js files
  - Updating functions.php to partially implement new styling system for
  viewt.php
  - Updating styles.php with more comments (encapsulated in php tags so
  they're stripped in processing) & removing old classes
  - Removing blanks lines at the end of js.php & site_extras.php
  - Updating admin docs with more efficient CSS & HTML
  - Converting year.php to new style system & adding comments for new minicals
  - Converting viewt.php over to new style system & fixing a couple odd
  rendering issues